Fixed nav spacing; Code cleanup

--- a/src/main/scss/templates.base/_li-nav-page.scss
+++ b/src/main/scss/templates.base/_li-nav-page.scss
@@ -20,7 +20,7 @@
 		}
 
 		.title {
-			padding-left: $size-base * 3;
+			padding-left: $size-base * 2;
 			font-size: 18px;
 		}
 	}
